# dogs

./: .gitignore  README.md  clean_up.py  config.yaml.example  create.py  create.sh  destroy.py  example.service  pyproject.toml  requirements-build.txt  requirements.txt
dogs/: __main__.py  build.py  cli.py  dogs.py
services/factorio/: create.sh  factorio.service  update.sh
